fixing alignment issues with icons

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -113,6 +113,10 @@ h3{
 	display: inline-block;
 	width: 30px;
 	text-align: center;
+	color: #e67e22;
+	font-size: 120%;
+	line-height: 120%;
+	vertical-align: middle;
 }
 
 
